css fix for background color on mobile device

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -12,6 +12,7 @@
   justify-content: space-around;
   background: none;
   margin-bottom: 10%;
+  background-color: #173340;
 }
 
 .nav-button {
